# Pastey

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.prograph/: diagnostics.json  manifest.json  state.json
docs/: CHANGELOG.md  architecture.md  development.md  reference.md  release-workflow.md  todo.md  transfer-hot-path.md  version-history.md
scripts/: check-build-size.mjs  check-version-consistency.mjs  cl4-contention-smoke.ts  generate-transfer-fixtures.mjs  generate-transfer-fixtures.ts  normalize-release-artifacts.mjs  release-version.mjs  replay-transfer-planner-scenarios.mjs  replay-transfer-planner-scenarios.ts  run-ai-slot-tests.mjs  run-candidate-payload-tests.mjs  run-candidate-payload-workflow-tests.mjs  run-capability-manifest-tests.mjs  (+14 more)
site/: README.md  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge_plan.rs  capability_probe.rs  chunk_frame.rs  cleanup.rs  commands.rs  config.rs  crypto.rs  dev_tools.rs  device_profile.rs  diagnostics.rs  discovery.rs  error.rs  file_candidates.rs  hello_stdout.rs  link_benchmark.rs  logging.rs  main.rs  models.rs  object_refs.rs  room_control.rs  storage.rs  transfer.rs  transfer_tuning.rs  transform_registry.rs
src-tauri/src/bridge_plan/: protocol.rs
src-tauri/src/transform_sandbox/: cleanup.rs  mod.rs  profile.rs  staging.rs  text_worker.rs
src-tauri/src/transform_sandbox/linux/: behavioral_verifier.rs  capability_probe.rs  cgroup.rs  launch_plan.rs  mod.rs  test_probe.rs
(+182 files in other folders)
